--- a/pages/6/css/main.css
+++ b/pages/6/css/main.css
@@ -10,13 +10,45 @@
   background: linear-gradient(#ce8283, #5876a8);
 }
 
+li {
+  display: inline-block;
+  padding: 1rem;
+}
+
+li a img {
+  width: 24px;
+  height: 24px;
+}
+
+li a img:hover {
+  opacity: 1;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 .frame-card {
-  width: 100%;
+  padding: 3rem;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  opacity: 0;
+  -webkit-animation: slow both 2s linear;
+          animation: slow both 2s linear;
+}
+
+.frame-card h1 {
+  margin: 1rem;
+  font-size: 50px;
+}
+
+.frame-card p {
+  font-size: 21px;
+  color: #FFFFFFBF;
+  width: 60%;
 }
 
 .frame-card hr {
-  width: 20%;
-  padding: 1rem;
+  width: 5%;
+  margin: 1rem;
 }
 
 .d-flex {
@@ -27,9 +59,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
@@ -37,73 +69,92 @@
 
 .user-img {
   border-radius: 50%;
-  width: 10rem;
-  height: 10rem;
+  width: 15rem;
+  height: 15rem;
+}
+
+@-webkit-keyframes slow {
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: .9;
+  }
+}
+
+@keyframes slow {
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: .9;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 375px) {
-  .frame-contain {
-    width: 100%;
-    height: 60%;
+  .frame {
+    height: 100%;
   }
-  .frame-contain h1 {
-    font-size: 30px;
-    width: 100%;
-    text-align: center;
+  .frame-card {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-  .frame-contain p {
-    font-size: 16px;
-    width: 100%;
-  }
-  .btn {
-    width: 300px;
-    max-height: 50px;
-    padding: 0rem;
+  .frame-card p {
     font-size: 18px;
+    width: 100%;
+  }
+  .frame-card hr {
+    width: 100%;
   }
 }
 
 @media (min-width: 425px) and (max-width: 768px) {
-  .frame-contain {
-    width: 100%;
-    height: 60%;
+  .frame {
+    height: 100%;
   }
-  .frame-contain h1 {
-    font-size: 30px;
-    width: 100%;
-    text-align: center;
+  .frame-card {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-  .frame-contain p {
-    font-size: 16px;
-    width: 100%;
-  }
-  .btn {
-    width: 300px;
-    max-height: 50px;
-    padding: 0rem;
+  .frame-card p {
     font-size: 18px;
+    width: 100%;
+  }
+  .frame-card hr {
+    width: 100%;
   }
 }
 
 @media (max-width: 1024px) {
-  .frame-contain {
-    width: 100%;
-    height: 60%;
+  .frame {
+    height: 100%;
   }
-  .frame-contain h1 {
-    font-size: 30px;
-    width: 100%;
-    text-align: center;
+  .frame-card {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-  .frame-contain p {
-    font-size: 16px;
-    width: 100%;
-  }
-  .btn {
-    width: 300px;
-    max-height: 50px;
-    padding: 0rem;
+  .frame-card p {
     font-size: 18px;
+    width: 100%;
+  }
+  .frame-card hr {
+    width: 10%;
+    margin-left: 0px;
+  }
+  .frame-card h1 {
+    margin: 0px;
   }
 }
 /*# sourceMappingURL=main.css.map */
