--- a/pages/6/css/main.scss
+++ b/pages/6/css/main.scss
@@ -5,107 +5,118 @@
 .frame{
     width: 100%;
     height: 100vh;
-
+    
     background: linear-gradient(#ce8283,#5876a8);
     
 }
-
+li{
+    display: inline-block;
+    padding: 1rem;
+    a {
+        img{
+            width: 24px;
+            height: 24px;
+            
+            &:hover{
+                opacity: 1;
+                transform: scale(1.2);
+            }
+        }
+    }
+}
 .frame-card{
-    width: 100%;
+   
+    padding: 3rem;
+    color:white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    opacity: 0;
+    animation: slow both 2s linear;
+    h1{
+        margin: 1rem;
+        font-size: 50px;
+    }
+    p{
+        font-size: 21px;
+        
+        color: #FFFFFFBF;
+        width: 60%;
+    }
     hr{
-        width: 20%;
-        padding: 1rem;
+        width: 5%;
+    margin:1rem;
     }
 }
 .d-flex{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     
 }
 
 .user-img{
     border-radius: 50%;
-    width: 10rem;
-    height: 10rem;
+    width: 15rem;
+    height: 15rem;
+}
+@keyframes slow
+{
+    50%{opacity: 0;}
+    100%{opacity: .9;}
 }
 @media (min-width:320px) and (max-width:375px) 
 {
-    .frame-contain{
-        width: 100%;
-        height: 60%;
-        
-        h1{
-            font-size: 30px;
-            width: 100%;
-            text-align: center;
-           
-        }
-        p{
-            font-size: 16px;
-            width: 100%;
-        }
-    }
-    .btn{
-        width:300px;
-        max-height: 50px;
-        padding: 0rem;
-        
-        font-size: 18px;
-      
-    }
+   .frame{
+       height: 100%;
+   }
+   .frame-card{
+       align-items: center;
+       justify-content: center;
+       p{
+           font-size: 18px;
+           width: 100%;
+       }
+       hr{
+           width: 100%;
+       }
+   }
 }
 
 @media (min-width:425px) and (max-width:768px) 
 {
-    .frame-contain{
-        width: 100%;
-        height: 60%;
-        
-        h1{
-            font-size: 30px;
-            width: 100%;
-            text-align: center;
-           
-        }
-        p{
-            font-size: 16px;
-            width: 100%;
-        }
+    
+    .frame{
+        height: 100%;
     }
-    .btn{
-        width:300px;
-        max-height: 50px;
-        padding: 0rem;
-        
-        font-size: 18px;
-      
+    .frame-card{
+        align-items: center;
+        justify-content: center;
+        p{
+            font-size: 18px;
+            width: 100%;
+        }
+        hr{
+            width: 100%;
+        }
     }
 }
 @media  (max-width:1024px) 
 {
-    .frame-contain{
-        width: 100%;
-        height: 60%;
-        
-        h1{
-            font-size: 30px;
-            width: 100%;
-            text-align: center;
-           
-        }
-        p{
-            font-size: 16px;
-            width: 100%;
-        }
-    }
-    .btn{
-        width:300px;
-        max-height: 50px;
-        padding: 0rem;
-        
+    
+   .frame{
+    height: 100%;
+}
+.frame-card{
+    align-items: flex-start;
+    justify-content: center;
+    p{
         font-size: 18px;
-      
+        width: 100%;
     }
+    hr{
+        width: 10%;
+        margin-left: 0px;
+    }
+    h1{margin:0px;}
+}
 }
